[gd_scene load_steps=9 format=3 uid="uid://d2tkl5xx16e7l"]

[ext_resource type="Script" path="res://scenes/combat/entities/base_entity.gd" id="1_fpitx"]
[ext_resource type="PackedScene" uid="uid://bxb17bv3fohd2" path="res://scenes/combat/entities/health/hp_bar.tscn" id="2_40eqa"]
[ext_resource type="PackedScene" uid="uid://cfp66oj1otkuc" path="res://scenes/combat/entities/buff_visualizer/buff_visualizer.tscn" id="3_5if2w"]

[sub_resource type="Animation" id="Animation_d6cwl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Damage:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("Sword:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.05941]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Buff:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_3n7tp"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.05941, 1.3631]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_attack"
}]
}

[sub_resource type="Animation" id="Animation_uq8vr"]
resource_name = "buff"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Buff:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Buff:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_buffed"
}]
}

[sub_resource type="Animation" id="Animation_rp636"]
resource_name = "damaged"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Damage:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 15.455),
"update": 1,
"values": [true, false]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_attacked"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e7w5i"]
_data = {
"RESET": SubResource("Animation_d6cwl"),
"attack": SubResource("Animation_3n7tp"),
"buff": SubResource("Animation_uq8vr"),
"damaged": SubResource("Animation_rp636")
}

[node name="BaseEntity" type="Node2D"]
script = ExtResource("1_fpitx")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -10.0
offset_top = -40.0
offset_right = 10.0
offset_bottom = 10.0

[node name="HPBar" parent="." instance=ExtResource("2_40eqa")]
unique_name_in_owner = true
offset_top = -86.0
offset_bottom = -66.0

[node name="BuffVisualizer" parent="." instance=ExtResource("3_5if2w")]
unique_name_in_owner = true
offset_top = -64.0
offset_bottom = -44.0

[node name="Sword" type="Polygon2D" parent="."]
visible = false
position = Vector2(26, -11)
rotation = 1.3631
scale = Vector2(1.625, 1)
color = Color(0.572549, 0.298039, 0.0901961, 1)
polygon = PackedVector2Array(9.84615, 0, 59.0769, 0, 64, -8, 59.0769, 8, 9.84615, 8, 9.84615, 0)

[node name="Damage" type="Polygon2D" parent="."]
visible = false
position = Vector2(0, -16)
scale = Vector2(1.625, 1)
color = Color(0.572549, 0.298039, 0.0901961, 1)
polygon = PackedVector2Array(-14.7692, -8, -4.92308, -8, -4.92308, -8, 0, -16, 4.92308, -8, 14.7692, -8, 9.84615, 0, 14.7692, 8, 4.92308, 8, 0, 16, -4.92308, 8, -14.7692, 8, -9.84615, 0)

[node name="DamageLabel" type="Label" parent="Damage"]
unique_name_in_owner = true
offset_left = -19.6923
offset_top = -16.0
offset_right = 20.3077
offset_bottom = 7.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "-1"
horizontal_alignment = 1

[node name="Buff" type="Polygon2D" parent="."]
visible = false
color = Color(0.768627, 0.239216, 0, 0.301961)
polygon = PackedVector2Array(-24, 0, -32, -40, -24, -56, 24, -56, 32, -40, 24, 0, 16, 8, 0, 16, -16, 8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e7w5i")
}

[node name="EntityName" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -64.0
offset_top = -128.0
offset_right = 64.0
offset_bottom = -105.0
horizontal_alignment = 1
